--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,61 +4,39 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-
     <TextView
+        android:id="@+id/textview1"
+        android:layout_centerInParent="true"
         android:textSize="30sp"
         android:text="View 1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <TextView
-        android:layout_alignParentEnd="true"
+        android:layout_toLeftOf="@id/textview1"
+        android:layout_above="@id/textview1"
         android:textSize="30sp"
         android:text="View 2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <TextView
-        android:layout_alignParentBottom="true"
+        android:layout_toRightOf="@id/textview1"
+        android:layout_above="@id/textview1"
         android:textSize="30sp"
         android:text="View 3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <TextView
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
+        android:layout_toLeftOf="@id/textview1"
+        android:layout_below="@id/textview1"
         android:textSize="30sp"
         android:text="View 4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <TextView
-        android:layout_centerHorizontal="true"
+        android:layout_toRightOf="@id/textview1"
+        android:layout_below="@id/textview1"
         android:textSize="30sp"
         android:text="View 5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    <TextView
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:textSize="30sp"
-        android:text="View 6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    <TextView
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:textSize="30sp"
-        android:text="View 7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    <TextView
-        android:layout_centerVertical="true"
-        android:textSize="30sp"
-        android:text="View 8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    <TextView
-        android:layout_centerInParent="true"
-        android:textSize="30sp"
-        android:text="View 9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 </RelativeLayout>
