--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,10 +33,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <TextView
+        android:id="@+id/textview5"
         android:layout_toRightOf="@id/textview1"
         android:layout_below="@id/textview1"
         android:textSize="30sp"
         android:text="View 5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+    <TextView
+        android:layout_alignLeft="@id/textview5"
+        android:layout_below="@id/textview5"
+        android:textSize="30sp"
+        android:text="View 6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 </RelativeLayout>
