--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,46 +5,26 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
     <TextView
+        android:background="#f20"
+        android:layout_alignRight="@id/view"
+        android:layout_alignParentLeft="true"
         android:id="@+id/textview1"
-        android:layout_centerInParent="true"
         android:textSize="30sp"
         android:text="View 1"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"/>
+    <View
+        android:id="@+id/view"
+        android:layout_centerHorizontal="true"
+        android:layout_width="1dp"
+        android:layout_height="1dp"/>
     <TextView
-        android:layout_toLeftOf="@id/textview1"
-        android:layout_above="@id/textview1"
+        android:layout_alignLeft="@id/view"
+        android:background="#3DBCB8"
+        android:layout_alignParentRight="true"
         android:textSize="30sp"
         android:text="View 2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
-    <TextView
-        android:layout_toRightOf="@id/textview1"
-        android:layout_above="@id/textview1"
-        android:textSize="30sp"
-        android:text="View 3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    <TextView
-        android:layout_toLeftOf="@id/textview1"
-        android:layout_below="@id/textview1"
-        android:textSize="30sp"
-        android:text="View 4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    <TextView
-        android:id="@+id/textview5"
-        android:layout_toRightOf="@id/textview1"
-        android:layout_below="@id/textview1"
-        android:textSize="30sp"
-        android:text="View 5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    <TextView
-        android:layout_alignLeft="@id/textview5"
-        android:layout_below="@id/textview5"
-        android:textSize="30sp"
-        android:text="View 6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+
 </RelativeLayout>
